--- a/html/mod-3/008.html
+++ b/html/mod-3/008.html
@@ -46,6 +46,9 @@
             <div class="img-footer"><span>Figura No 3. Umbral de evaluación FRAX para la población colombiana [Adriana Medina Orjuela, Óscar Rosero Olarte, Pedro Nel Rueda Plata. II Consenso Colombiano para el Manejo de la Osteoporosis Posmenopáusica. rev colomb reumatol. 2018;25(3):184–210]</span></div>
           </div>
         </div>
+        <ul>
+          <li>Umbral de evaluación que debe usarse cuando hay disponibilidad de equipos y que aumenta la precisión de la medición. (ver figura No 4)</li>
+        </ul>
         <div class="banner-video">
           <div class="span8">
             <div id="video">
