--- a/html/mod-3/002.html
+++ b/html/mod-3/002.html
@@ -36,7 +36,7 @@
         <div class="accordion" id="accordion2">
           <div class="accordion-group">
             <div class="accordion-heading"><a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapse1"><span>Edad</span></a></div>
-            <div class="accordion-body collapse in" id="collapse1">
+            <div class="accordion-body collapse" id="collapse1">
               <div class="accordion-inner">
                 <p>Para cualquier DMO, el riesgo de fractura es mucho mayor en los ancianos que en los jóvenes, ya que la edad contribuye al riesgo independientemente de la DMO. En el umbral de la osteoporosis (puntuación T = - 2,5 DE), la probabilidad de fractura de cadera a 10 años varía 5 veces en las mujeres de según la edad. (Kanis JA et al, 2001)</p>
               </div>
