--- a/html/mod-3/003.html
+++ b/html/mod-3/003.html
@@ -64,7 +64,7 @@
             </div>
           </div>
           <div class="span4">
-            <div class="img-footer"><span>Figura No 1. Método semi cuantitativo de Genant  (adaptado de J. Bone Miner. Res. 8 (1993) 1137–1148, http://dx.doi. org/10.1002/jbmr.5650080915)</span></div>
+            <div class="img-footer"><span>Figura No 1. Método semi cuantitativo de Genant  (adaptado de J. Bone Miner. Res. 8 (1993) </span></div>
           </div>
         </div>
         <div class="container-fluid">
