--- a/html/mod-3/005.html
+++ b/html/mod-3/005.html
@@ -35,7 +35,7 @@
         <div class="accordion" id="accordion2">
           <div class="accordion-group">
             <div class="accordion-heading"><a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne"><span>1. Los exámenes de primer nivel incluyen:</span></a></div>
-            <div class="accordion-body collapse in" id="collapseOne">
+            <div class="accordion-body collapse" id="collapseOne">
               <div class="accordion-inner">
                 <ul>
                   <li>Recuento de células sanguíneas.</li>
@@ -67,11 +67,11 @@
                   <li>Cadenas ligeras kappa y lambda libres.</li>
                   <li>Aspiración y biopsia de médula ósea.</li>
                 </ul>
+                <p>El examen de segundo nivel incluye análisis / exámenes que pueden realizarse en pacientes con sospecha extremadamente alta de causas secundarias de osteoporosis. (ver tabla No 1).</p>
               </div>
             </div>
           </div>
         </div>
-        <p>El examen de segundo nivel incluye análisis / exámenes que pueden realizarse en pacientes con sospecha extremadamente alta de causas secundarias de osteoporosis. (ver tabla No 1).</p>
         <table class="table table-striped">
           <caption>Tabla No 1. Test bioquímico y diagnóstico asociado ( flecha arriba=incrementa; flecha abajo=disminuye)</caption>
           <thead>
