--- a/html/mod-3/007.html
+++ b/html/mod-3/007.html
@@ -35,7 +35,7 @@
         <div class="accordion" id="accordion2">
           <div class="accordion-group">
             <div class="accordion-heading"><a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne"><span>1. FRAX</span></a></div>
-            <div class="accordion-body collapse in" id="collapseOne">
+            <div class="accordion-body collapse" id="collapseOne">
               <div class="accordion-inner">
                 <p>Es la más utilizada. Desde su lanzamiento en 2008, se han puesto a disposición modelos para 64 países en 34 idiomas, que cubren el 80% de la población mundial. (http://www.shef.ac.uk/FRAX). Es una herramienta que permite calcular el riesgo absoluto de fractura osteoporótica global o mayor (cadera, espina dorsal clínica, húmero o fractura de muñeca) y el riesgo de fractura de cadera a 10 años a partir de una serie de factores de riesgo clínicos, con o sin datos de densitometría ósea. (Kanis JA et al, 2008)</p>
                 <p>La DMO del cuello femoral puede introducirse opcionalmente para mejorar la predicción del riesgo de fractura. La probabilidad de fractura se calcula teniendo en cuenta tanto el riesgo de fractura como el riesgo de muerte.</p>
