--- a/html/mod-3/008.html
+++ b/html/mod-3/008.html
@@ -43,7 +43,7 @@
             </div>
           </div>
           <div class="span4">
-            <div class="img-footer"><span>Figura No 3. Umbral de evaluación FRAX para la población colombiana [Adriana Medina Orjuela, Óscar Rosero Olarte, Pedro Nel Rueda Plata. II Consenso Colombiano para el Manejo de la Osteoporosis Posmenopáusica. rev colomb reumatol. 2018;25(3):184–210]</span></div>
+            <div class="img-footer"><span>Figura No 3. Umbral de evaluación FRAX para la población colombiana (Adaptado de Medina Orjuela, A., et al, 2018)</span></div>
           </div>
         </div>
         <ul>
@@ -56,7 +56,7 @@
             </div>
           </div>
           <div class="span4">
-            <div class="img-footer"><span>Figura No 4. Umbral de intervención FRAX para la población colombiana [Adriana Medina Orjuela, Óscar Rosero Olarte, Pedro Nel Rueda Plata. II Consenso Colombiano para el Manejo de la Osteoporosis Posmenopáusica. rev colomb reumatol. 2018;25(3):184–210]</span></div>
+            <div class="img-footer"><span>Figura No 4. Umbral de evaluación FRAX para la población colombiana (Adaptado de Medina Orjuela, A., et al, 2018)</span></div>
           </div>
         </div>
         <div class="container-fluid">
