--- a/html/mod-4/001.html
+++ b/html/mod-4/001.html
@@ -30,7 +30,7 @@
           </div>
         </div>
         <h2>Módulo 4 / <span>Estrategias óptimas de tratamiento de la osteoporosis postmenopáusica</span></h2>
-        <p> <strong>Dr. José Fernando Molina, MD</strong>Médico Reumatólogo, Universidad del Estado de Louisiana, New Orleans. Unidad de Osteoporosis y Reumalab, Medellín.		</p>
+        <p> <strong>Dr. José Fernando Molina, MD  </strong>Médico Reumatólogo, Universidad del Estado de Louisiana, New Orleans. Unidad de Osteoporosis y Reumalab, Medellín.		</p>
         <h3>1. Objetivos del módulo</h3>
         <div class="bs-docs">
           <ul class="nav nav-tabs" id="myTab">
@@ -51,7 +51,7 @@
           </div>
         </div>
         <h3>2. Introducción </h3>
-        <p> <strong>La osteoporosis (OP) es una enfermedad esquelética sistémica caracterizada por baja masa ósea y deterioro de la microarquitectura del tejido óseo con un aumento en la fragilidad del hueso que predispone al riesgo de fractura de bajo trauma o sin trauma, afectando a la población mundial generando gastos importantes en la salud pública. </strong></p>
+        <p>La osteoporosis (OP) es una enfermedad esquelética sistémica caracterizada por baja masa ósea y deterioro de la microarquitectura del tejido óseo con un aumento en la fragilidad del hueso que predispone al riesgo de fractura de bajo trauma o sin trauma, afectando a la población mundial generando gastos importantes en la salud pública. </p>
         <p>El objetivo del tratamiento de pacientes con OP es prevenir las fracturas, disminuir el dolor si estuviera presente y mantener la función esquelética. </p>
         <p>La educación del paciente comienza desde la infancia con una buena nutrición y la práctica de ejercicio físico que debe ser mantenida en la adultez, esto con el fin de lograr un adecuado pico de masa ósea (PMO).</p>
         <p>El tratamiento incluye:</p>
