--- a/html/mod-4/003.html
+++ b/html/mod-4/003.html
@@ -80,7 +80,7 @@
               <td>Vertebral, no vertebral y cadera</td>
             </tr>
             <tr>
-              <td rowspan="7">Prevención y tratamiento</td>
+              <td rowspan="6">Prevención y tratamiento</td>
               <td>Alendronato</td>
               <td>35-70mg /sem</td>
               <td>Oral</td>
@@ -113,6 +113,19 @@
               <td>60 mg/día</td>
               <td>Oral</td>
               <td>Vertebral</td>
+            </tr>
+            <tr>
+              <td rowspan="2">Tratamiento</td>
+              <td>Denosumab</td>
+              <td>60 mg/cada 6 meses</td>
+              <td>Subcutánea</td>
+              <td>Vertebral, no vertebral y cadera</td>
+            </tr>
+            <tr>
+              <td>Teriparatide</td>
+              <td>20 mcg/día</td>
+              <td>Subcutánea</td>
+              <td>Vertebral, no vertebral</td>
             </tr>
           </tbody>
         </table>
