--- a/html/mod-4/004.html
+++ b/html/mod-4/004.html
@@ -89,7 +89,7 @@
           <li>Hiperparatiroidismo. </li>
           <li>Fármacos: anticonvulsivantes, glucocorticoides, ketoconazol, colestiramina, algunos tratamientos del SIDA.</li>
           <li>Adultos mayores con historia personal de caídas o de fracturas no traumáticas. </li>
-          <li>Obesidad (definida por IMC > 30 kg/m2). </li>
+          <li>Obesidad (definida por IMC > 30 kg/m<sup>2</sup>). </li>
           <li>Enfermedades granulomatosas, linfomas. </li>
           <li>Enfermedades neurológicas crónicas: parkinson, esclerosis múltiple, etc.  </li>
           <li>Cáncer. </li>
