--- a/html/mod-4/008.html
+++ b/html/mod-4/008.html
@@ -44,7 +44,17 @@
         <div class="banner-video">
           <div class="span8">
             <div id="video">
-              <figure class="galeria"><a class="example-image-link" href="https://ubosquemoodle.unbosque.edu.co/diseno/cursos/osteoporosis-amgen/images/mod4/0002.jpg" data-lightbox="example-1"><img class="example-image" src="https://ubosquemoodle.unbosque.edu.co/diseno/cursos/osteoporosis-amgen/images/mod4/0002.jpg" alt="image-1"/></a></figure>
+              <figure class="galeria"><a class="example-image-link" href="https://ubosquemoodle.unbosque.edu.co/diseno/cursos/osteoporosis-amgen/images/mod4/0001-2.jpg" data-lightbox="example-1"><img class="example-image" src="https://ubosquemoodle.unbosque.edu.co/diseno/cursos/osteoporosis-amgen/images/mod4/0001-2.jpg" alt="image-1"/></a></figure>
+            </div>
+          </div>
+          <div class="span4">
+            <div class="img-footer"><span>13.1. Algoritmo terapéutico para osteoporosis postmenopáusica 2016 AAEC/ICE. (Tomado y traducico de AMERICAN ASSOCIATION OF CLINICAL ENDOCRINOLOGISTS AND AMERICAN COLLEGE OF ENDOCRINOLOGY CLINICAL PRACTICE GUIDELINES FOR THE DIAGNOSIS AND TREATMENT OF POSTMENOPAUSAL OSTEOPOROSIS — 2016)</span></div>
+          </div>
+        </div>
+        <div class="banner-video">
+          <div class="span8">
+            <div id="video">
+              <figure class="galeria"><a class="example-image-link" href="https://ubosquemoodle.unbosque.edu.co/diseno/cursos/osteoporosis-amgen/images/mod4/0002.jpg" data-lightbox="example-2"><img class="example-image" src="https://ubosquemoodle.unbosque.edu.co/diseno/cursos/osteoporosis-amgen/images/mod4/0002.jpg" alt="image-1"/></a></figure>
             </div>
           </div>
           <div class="span4">
@@ -54,7 +64,7 @@
         <div class="banner-video">
           <div class="span8">
             <div id="video">
-              <figure class="galeria"><a class="example-image-link" href="https://ubosquemoodle.unbosque.edu.co/diseno/cursos/osteoporosis-amgen/images/mod4/0003.jpg" data-lightbox="example-1"><img class="example-image" src="https://ubosquemoodle.unbosque.edu.co/diseno/cursos/osteoporosis-amgen/images/mod4/0003.jpg" alt="image-1"/></a></figure>
+              <figure class="galeria"><a class="example-image-link" href="https://ubosquemoodle.unbosque.edu.co/diseno/cursos/osteoporosis-amgen/images/mod4/0003.jpg" data-lightbox="example-3"><img class="example-image" src="https://ubosquemoodle.unbosque.edu.co/diseno/cursos/osteoporosis-amgen/images/mod4/0003.jpg" alt="image-1"/></a></figure>
             </div>
           </div>
           <div class="span4">
@@ -64,7 +74,7 @@
         <div class="banner-video">
           <div class="span8">
             <div id="video">
-              <figure class="galeria"><a class="example-image-link" href="https://ubosquemoodle.unbosque.edu.co/diseno/cursos/osteoporosis-amgen/images/mod4/0004.jpg" data-lightbox="example-1"><img class="example-image" src="https://ubosquemoodle.unbosque.edu.co/diseno/cursos/osteoporosis-amgen/images/mod4/0004.jpg" alt="image-1"/></a></figure>
+              <figure class="galeria"><a class="example-image-link" href="https://ubosquemoodle.unbosque.edu.co/diseno/cursos/osteoporosis-amgen/images/mod4/0004.jpg" data-lightbox="example-4"><img class="example-image" src="https://ubosquemoodle.unbosque.edu.co/diseno/cursos/osteoporosis-amgen/images/mod4/0004.jpg" alt="image-1"/></a></figure>
             </div>
           </div>
           <div class="span4">
@@ -74,7 +84,7 @@
         <div class="banner-video">
           <div class="span8">
             <div id="video">
-              <figure class="galeria"><a class="example-image-link" href="https://ubosquemoodle.unbosque.edu.co/diseno/cursos/osteoporosis-amgen/images/mod4/0005.jpg" data-lightbox="example-1"><img class="example-image" src="https://ubosquemoodle.unbosque.edu.co/diseno/cursos/osteoporosis-amgen/images/mod4/0005.jpg" alt="image-1"/></a></figure>
+              <figure class="galeria"><a class="example-image-link" href="https://ubosquemoodle.unbosque.edu.co/diseno/cursos/osteoporosis-amgen/images/mod4/0005.jpg" data-lightbox="example-5"><img class="example-image" src="https://ubosquemoodle.unbosque.edu.co/diseno/cursos/osteoporosis-amgen/images/mod4/0005.jpg" alt="image-1"/></a></figure>
             </div>
           </div>
           <div class="span4">
