--- a/html/mod-5/006.html
+++ b/html/mod-5/006.html
@@ -36,7 +36,7 @@
         <div class="accordion" id="accordion2">
           <div class="accordion-group">
             <div class="accordion-heading"><a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne"><span>Densidad mineral ósea</span></a></div>
-            <div class="accordion-body collapse in" id="collapseOne">
+            <div class="accordion-body collapse" id="collapseOne">
               <div class="accordion-inner">
                 <p>Las mujeres que iniciaban su tratamiento para osteoporosis y tenían adherencia ≥ 66 % tuvieron aumentos de DMO en columna de 3,8 % por año, comparados con incrementos de DMO 2,1 % por año para aquellas con adherencia ≤ 66 % (adherencia fue medida por el porcentaje de tiempo que tomaba cada paciente en repetir sus prescripciones y por el valor de DMO al final del estudio – promedio 590 días) (Yood, R. A., et al, 2003). La adherencia a un año de terapia se asoció con cambios en DMO de cadera mas no lumbar (Clowes, J. A., Peel, N. F. A., & Eastell, R. 2004). </p>
               </div>
@@ -51,8 +51,8 @@
             </div>
           </div>
           <div class="accordion-group">
-            <div class="accordion-heading"><a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo"><span>Reducción de riesgo de fractura</span></a></div>
-            <div class="accordion-body collapse" id="collapseTwo">
+            <div class="accordion-heading"><a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapse3"><span>Reducción de riesgo de fractura</span></a></div>
+            <div class="accordion-body collapse" id="collapse3">
               <div class="accordion-inner">
                 <p>Probablemente el primer estudio en medir el impacto en la tasa de fracturas en pobre adherencia fue hecho por Caro y cols, en 11.000 mujeres en Saskatchewan, el cual identificó las pacientes adherentes con MPR ≥80 %, experimentaron una tasa menor de fracturas del 16 % comparadas con mujeres no adherentes (HR =0.81; P = 0.0009). Los investigadores identificaron la edad > 75 años, corto plazo de historia de fractura y uso previo de medicamentos para osteoporosis o esteroides como predictores de riesgo independientes para incrementar el riesgo de fractura (Caro, J. J., et al, 2004). En un Análisis retrospectivo de reclamos de dos bases farmacéuticas durante dos años, se evaluó el riesgo de fracturas en mujeres ≥ 45 años con osteoporosis postmenopáusica y tratamiento de inicio con BF, de las cuales 43 % tenían MPR>80 % al primer año y 20 % al segundo. Las fracturas de cadera, total, vertebral y no vertebral fueron significativamente menores en las pacientes adherentes y persistentes con reducciones de riesgo relativos de 20 a 45 %. Se demostró una relación progresiva entre la reducción del riesgo de fractura y la adherencia a la terapia iniciando desde MPR del 50 % y que se hacía más pronunciada a tasas de 75 % y más, como se puede observar en la figura No 2 (Siris, E. S., et al, 2006).</p>
               </div>
