--- a/html/mod-5/008.html
+++ b/html/mod-5/008.html
@@ -37,7 +37,7 @@
         <p>Sin embargo hay obstáculos que salvar en esta comunicación, como son: la evidencia medica sobre eficacia es compleja y puede ser incompleta e incierta, los pacientes tienen desconfianza de los médicos y medicamentos, la ignorancia en el riesgo de fractura y sus consecuencia tanto en médicos como pacientes, ausencia de habilidades y/o de tiempo en los médicos para explicar beneficios y riesgos en la terapia y los informes de medios de comunicación acerca de efectos adversos raros del tratamiento (Camacho, P. M., et al, 2016; Boudreau, D. M., et al, 2006).</p>
         <div>
           <div class="span10 resaltado-txt">
-            <p>Las estrategias para mejorar la adherencia se pueden dividir en: basadas en el paciente (educación, La comunicación del riesgo es un proceso activo y recíproco entre médico y paciente)</p>
+            <p>La comunicación del riesgo es un proceso activo y recíproco entre médico y paciente</p>
           </div>
         </div>
         <h4>Estrategias para comunicar el riesgo </h4>
