--- a/html/mod-6/001.html
+++ b/html/mod-6/001.html
@@ -30,7 +30,7 @@
           </div>
         </div>
         <h2>Módulo 6 / <span>Estrategias de Prevención Secundaria de Fracturas por Fragilidad (FLS)</span></h2>
-        <p> <strong>Dr. Francisco Bernardo Linares Restrepo</strong>Especialista en Ortopedia y Traumatología, Ortopedia Oncológica, Director Departamento de Ortopedia de la Pontificia Universidad Javeriana y del Hospital Universitario San Ignacio.</p>
+        <p> <strong>Dr. Francisco Bernardo Linares Restrepo:  </strong>Especialista en Ortopedia y Traumatología, Ortopedia Oncológica, Director Departamento de Ortopedia de la Pontificia Universidad Javeriana y del Hospital Universitario San Ignacio.</p>
         <h3>1. Objetivos de Aprendizaje</h3>
         <div class="bs-docs">
           <ul class="nav nav-tabs" id="myTab">
