--- a/html/mod-4/005.html
+++ b/html/mod-4/005.html
@@ -44,7 +44,7 @@
         <div class="accordion" id="accordion2">
           <div class="accordion-group">
             <div class="accordion-heading"><a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne"><span>Alendronato</span></a></div>
-            <div class="accordion-body collapse in" id="collapseOne">
+            <div class="accordion-body collapse" id="collapseOne">
               <div class="accordion-inner">
                 <p>Se utiliza por vía oral en dosis de 10 mg/día o 70 mg semanales. Se demostró que reduce el riesgo de fracturas vertebrales, de antebrazo y cadera en ~50% en tres años en pacientes con una fractura vertebral previa (estudio FIT Fracture Intervention Trial). Administrado durante 4 años en pacientes sin fractura vertebral previa, la reducción de la incidencia de fracturas vertebrales radiológicas es de 44%. La reducción del riesgo de fracturas no vertebrales en pacientes sin fractura previa fue estimada en 30%. </p>
                 <p>Luego de 5 años de tratamiento, la continuación del mismo por otros 5 años redujo la incidencia de fracturas vertebrales en un 45% comparado con los pacientes que previamente habían recibido el tratamiento activo pero que no continuaron el mismo (estudio FLEX). La reducción absoluta del riesgo fue de 2.4% debido al escaso número de casos con fractura.</p>
@@ -69,8 +69,8 @@
             </div>
           </div>
           <div class="accordion-group">
-            <div class="accordion-heading"><a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapse3"><span>Ácido Zoledrónico</span></a></div>
-            <div class="accordion-body collapse" id="collapse3">
+            <div class="accordion-heading"><a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapse4"><span>Ácido Zoledrónico</span></a></div>
+            <div class="accordion-body collapse" id="collapse4">
               <div class="accordion-inner">
                 <p>Se utiliza por vía endovenosa 5 mg en 100 ml de solución anual a pasar al menos durante 15 minutos. Los pacientes deben estar bien hidratados. Reduce la incidencia de fracturas vertebrales por 70%, fracturas de cadera 41% y fracturas no vertebrales por 25% durante 3 años.</p>
               </div>
@@ -129,7 +129,7 @@
         <p>El denosumab puede causar hipocalcemia, y si está presente, debe corregirse antes de su administración. Puede ser utilizado en pacientes con función renal comprometida. Incrementa el riesgo de infecciones en piel tales como la celulitis. Ha sido asociado raramente con osteonecrosis mandibular ya sea para OP o pacientes con cáncer. También ha sido asociado raramente con fractura atípica de fémur. </p>
         <p>Cuando el tratamiento es suspendido, puede disminuir rápidamente la DMO, aumentan los marcadores óseos y en algunos casos se incrementa el riesgo de fractura vertebral, por lo que no es recomendado el uso vacaciones con este agente, y se deben utilizar agentes alternativos como mantenimiento. (Rachner TD, et al, 2011) (Zaheer S., et al 2015).</p>
         <h4>7.3 Hormona paratirodidea: Teriparatide: </h4>
-        <p>El teriparatide (1-34 aminoacidos) es un compuesto sintetizado en forma recombinante que está aprobado por la FDA para el tratamiento de la OP en mujeres y hombres con alto riesgo de fractura. Reduce el riesgo de fracturas vertebrales en un 65% y la fracturas no vertebrales en el 53% en pacientes con OP luego de 18 meses de tratamiento. Se utilizan 20 mcg /dia subcutánea. </p>
+        <p>El teriparatide (1-34 aminoacidos) es un compuesto sintetizado en forma recombinante que está aprobado por la FDA para el tratamiento de la OP en mujeres y hombres con alto riesgo de fractura. Reduce el riesgo de fracturas vertebrales en un 65% y las fracturas no vertebrales en el 53% en pacientes con OP luego de 18 meses de tratamiento. Se utilizan 20 mcg /dia subcutánea. </p>
         <p>Los  mecanismos  de  acción  no  son  completamente entendidos,  pero  parecería  que  suministrada de forma intermitente y no continua, su  efecto  es  osteo formador,  a  través  de  la  generación de sustancias que estimulan el osteoblasto  para  la  formación  ósea  como  la  IGF-1,  las proteínas  morfogenéticas  y  la  Wnt  estimulando la aposición de hueso nuevo en las superficies  óseas  trabecular  y  cortical  (endóstica  y perióstica) por estimulación preferencial de la actividad  osteoblástica  sobre  la  actividad  osteoclástica.</p>
         <p>Como monoterapia, su duración es por 2 años; después de este periodo puede considerarse tratamiento antiresortivo como terapia de mantenimiento. (Camacho P., et al, 2016) (Cosman F., et al 2014) (Watts NB., Manson JE., 2017)</p>
         <p>Dentro de sus efectos adversos se encuentran: hipotensión ortostática, hipercalcemia   transitoria, náuseas, artralgias, calambres.  Se encuentra contraindicado en pacientes con riesgo de osteosarcoma, enfermedad de Paget, radiación esquelética, y elevación inexplicada de la fosfatasa alcalina.</p>
